Bug 477927 - Never asks for notification permission
Summary: Never asks for notification permission
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Android Android 13.x
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-02 17:54 UTC by Joshua Goins
Modified: 2024-01-13 20:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua Goins 2023-12-02 17:54:12 UTC
Will be possible now that https://invent.kde.org/frameworks/knotifications/-/merge_requests/135 is merged, have to figure out the best place to ask it
Comment 1 Joshua Goins 2024-01-13 20:35:02 UTC
Git commit 2b4e90ff2699164a717a98bc52292347317fc9b1 by Joshua Goins.
Committed on 13/01/2024 at 21:19.
Pushed by redstrate into branch 'master'.

Add initial setup flow where required

This adds several new pages for "initial setup" in places where this is
needed. In some cases, the environment does not have a password service
so Tokodon refuses to continue in order to prevent logging in and losing
your credentials. On Android, the notifications permission is
 prompted here too.

In the ideal KDE Plasma desktop setup (or GNOME Desktop) there is no
setup.
Related: bug 473787

M  +7    -0    src/CMakeLists.txt
M  +3    -0    src/config.kcfg
A  +59   -0    src/content/ui/InitialSetup/SetupNotifications.qml     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +37   -0    src/content/ui/InitialSetup/SetupPassword.qml     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +47   -0    src/content/ui/InitialSetup/SetupWelcome.qml     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
M  +8    -1    src/content/ui/Main.qml
A  +100  -0    src/utils/initialsetupflow.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +26   -0    src/utils/initialsetupflow.h     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]

https://invent.kde.org/network/tokodon/-/commit/2b4e90ff2699164a717a98bc52292347317fc9b1